# ChangeLog for genkernel
# Copyright 2006-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  28 Feb 2008; Chris Gianelloni <wolf31o2@gentoo.org> gen_initramfs.sh,
  generic/linuxrc:
  Use which to determine the location of splash_geninitramfs, rather than
  having an endless number of conditional checks for the location. This fixes
  bug #211521. Thanks to Uriy Zhuravlev <stalkerg@gmail.com> for finding the
  problem and suggesting a solution.

  20 Feb 2008; Chris Gianelloni <wolf31o2@gentoo.org>
  -xenU/kernel-config-2.6, -xen0/kernel-config-2.6, genkernel,
  -xen0/busy-config, -xen0/config.sh, -xen0/modules_load, -xenU/busy-config,
  -xenU/config.sh, -xenU/modules_load:
  Removing the xen0 and xenU arches, since they didn't work, anyway. This is
  genkernel 3.4.10_pre3 for testing.

  20 Feb 2008; Andrew Gaffney <agaffney@gentoo.org> gen_package.sh:
  Add missing space before closing ]

  19 Feb 2008; Andrew Gaffney <agaffney@gentoo.org> generic/initrd.scripts:
  Apply patch from bug 210457 to fix variable substitution. Thanks to Paul
  Taylor <birder@ozemail.com.au> for reporting

  19 Feb 2008; Andrew Gaffney <agaffney@gentoo.org> generic/linuxrc:
  Remove quotes from around ${ROOT_TREES} so that the dirs are parsed
  separately by bash/cp

  14 Feb 2008; Chris Gianelloni <wolf31o2@gentoo.org> gen_compile.sh,
  gen_determineargs.sh, gen_funcs.sh, gen_initramfs.sh, gen_initrd.sh,
  generic/initrd.defaults, generic/initrd.scripts, generic/linuxrc,
  genkernel, genkernel.8, genkernel.conf:
  Removing DEVFS support from genkernel since we don't support 2.4 kernels
  anymore. This is 3.4.10_pre2.

  14 Feb 2008; Chris Gianelloni <wolf31o2@gentoo.org>
  generic/initrd.scripts:
  Added a line to make sure we remove image.squashfs as well as the other loop
  names used by catalyst.

  14 Feb 2008; Chris Gianelloni <wolf31o2@gentoo.org> gen_compile.sh:
  Added another patch from Javier Miqueleiz <javier@miqueleiz.com> in bug