@@ -2,6 +2,10 @@
 # Copyright 2006-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  28 Feb 2008; Chris Gianelloni <wolf31o2@gentoo.org> gen_cmdline.sh,
+  gen_initramfs.sh, gen_initrd.sh, generic/initrd.scripts:
+  Added a --no-keymap option for bug #210886.
+
   28 Feb 2008; Chris Gianelloni <wolf31o2@gentoo.org> gen_initramfs.sh,
   generic/linuxrc:
   Use which to determine the location of splash_geninitramfs, rather than
